nearly done with all entity ai